--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/konva@8.3.1/konva.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://ajay-konvajs.netlify.app/styles.css" />
   <body>
     <div id="container"></div>
     <div id="drag-items">
@@ -19,6 +19,6 @@
       <button type="button" id="myButton" draggable="true">Button</button>
     </div>
     <div id="css-code"></div>
-    <script src="index.js"></script>
+    <script src="https://ajay-konvajs.netlify.app/index.js"></script>
   </body>
 </html>
