--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Konva Drag and Drop Text Example</title>
+    <title>Konva JS</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/konva@8.3.1/konva.min.js"></script>
-    <link rel="stylesheet" href="https://ajay-konvajs.netlify.app/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
     <div id="container"></div>
     <div id="drag-items">
@@ -19,6 +20,6 @@
       <button type="button" id="myButton" draggable="true">Button</button>
     </div>
     <div id="css-code"></div>
-    <script src="https://ajay-konvajs.netlify.app/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
