--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
   <body>
     <div id="container"></div>
     <div id="drag-items">
-      <label draggable="true" id="myText">Text</label>
-      <input
+      <label>Drag Menu ==> </label>
+      <button type="button" id="myText" draggable="true">Text</button>
+      <button type="button" id="myInput" draggable="true">Input</button>
+      <button type="button" id="myButton" draggable="true">Button</button>
+      <!-- <label draggable="true" id="myText">Text</label>
+      <label draggable="true" id="myInput">Input</label>
+      <label draggable="true" id="myButton">Button</label> -->
+      <!-- <input
         type="text"
         id="myInput"
         value="This is a text box"
         draggable="true"
       />
-      <button type="button" id="myButton" draggable="true">Button</button>
+      <button type="button" id="myButton" draggable="true">Button</button> -->
     </div>
     <div id="css-code"></div>
     <script src="index.js"></script>
