--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Konva JS</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/konva@8.3.1/konva.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/konva@8.4.3/konva.min.js"></script> -->
+    <script src="https://unpkg.com/konva@8.4.3/konva.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,6 +17,7 @@
       <button type="button" id="myButton" draggable="true">Button</button>
     </div>
     <div id="css-code"></div>
+    <div id="dynamic-container" class="hidden"></div>
     <script src="index.js"></script>
   </body>
 </html>
