--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <button type="button" id="myButton" draggable="true">Button</button>
     </div>
     <div id="css-code"></div>
-    <div id="dynamic-container" class="hidden"></div>
+    <div id="wrapper">
+      <div id="dynamic-container" class="hidden"></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
